objects/BD_Contract_Discount_Exception__c.object
<CustomObject>
    <label>Contract Discount Exception</label>
    <nameField>
        <displayFormat>CDE-{0000}</displayFormat>
        <label>Contract Discount Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Discount Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BD_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BD_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Parts_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parts Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Discount Exceptions (Parts Product)</relationshipLabel>
        <relationshipName>Parts_Contract_Discount_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Last_Txn_Number__c</fullName>
        <label>Last Txn Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_SAP_Activity_Type__c</fullName>
        <label>SAP Activity Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Instrument_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instrument Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Discount Exceptions (Instrument)</relationshipLabel>
        <relationshipName>Instrument_Contract_Discount_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>